@@ -1,3 +1,14 @@
+2024-02-05  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-cache.el (with-tramp-saved-file-property)
+	(with-tramp-saved-file-properties)
+	(with-tramp-saved-connection-property)
+	(with-tramp-saved-connection-properties): Do not change KEY
+	destructively.
+
+	* tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band):
+	Flush file properties in time.  (Bug#68805)
+
 2024-02-04  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* tramp-sh.el (ls-lisp-use-insert-directory-program):
